# clync

./: Cargo.toml  README.md  TESTING.md  test_server.sh
src/: client.rs  main.rs  server.rs
