[package]
name = "clync"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
copypasta = "0.10.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
clap = { version = "4.5.45", features = ["derive"] }
actix-web = "4.11.0"
anyhow = "1.0.70"
